Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8404

Icons in Start Menu -> Programs aren't pixel-exact 16x16 icons

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Shell

    Description

      Trying out r63752 from the new Explorer branch, icons in Start Menu -> Programs still don't like the pixel-exact 16x16 icons of the corresponding applications. This already happened in the old Explorer for ages, so looks like a general problem in an underlying shell component.
      Attached two screenshots of the problem in the old and new Explorer.

      Attachments

        1. new_explorer.png
          18 kB
          Colin Finck
        2. old_explorer.PNG
          8 kB
          Colin Finck
        3. swyter-shell32-iconcache-use-LR_COPYFROMRESOURCE.patch
          1 kB
          Swyter
        4. swyter-16px-icons-in-explorer-cabinet.png
          24 kB
          Swyter
        5. swyter-16px-icons-in-start-menu.png
          26 kB
          Swyter

        Activity

          People

            bug zilla Bug Zilla
            Colin Finck Colin Finck
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: