[SHELL32] * Use PrivateExtractIconsW instead of PrivateExtractIconExW to obtain the icons for caching. Fixes small shell icons using large icons scaled down instead of the proper 16px icons. Patch by Ismael Ferreras Morezuelas (swyter). CORE-8404 #resolve #comment Commited in r65683. Thanks.

svn path=/trunk/; revision=65683